--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <h2>旅行先</h2>
 <p><%= @post.location %></p>
-<h2>感想<h2>
-<p><% @post.text %></p>
+<h2>感想</h2>
+<p><%= @post.text %></p>
 <h4><%= link_to '戻る', :back %></h4>
