--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,5 +3,6 @@
 <h2>感想</h2>
 <p><%= @post.text %></p>
 <h4><%= link_to '戻る', :back %></h4>
-<%= link_to'編集する',edit_post_path(@post.id) %><br>
-<%= link_to'投稿一覧ページへ',post_path %>
+<%= link_to'編集する', edit_post_path(@post.id) %><br>
+<%= link_to'削除する', post_path(@post.id), data: { turbo_method: :delete, turbo_confirm: "本当に消しますか？"} %><br>
+<%= link_to'投稿一覧ページへ',posts_path %>
