--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,8 +1,10 @@
-<h1>新規旅行投稿</h2>
+<h1>新規旅行投稿</h1>
 <%= form_with model: @post,local:true do |f| %>
     <h4>旅行先</h4>
     <%= f.text_field :location %>
     <h4>感想</h4>
     <%= f.text_area :text %>
+    <h4>画像</h4>
+    <%= f.file_field :image %>
     <%= f.submit '投稿する' %>
 <% end %>    
